[package]
name = "dupcheck"
version = "0.1.0"
authors = ["Thomas Templeton <thomas.templeton.dev@gmail.com>"]
description = "Duplicate file checker"
documentation = "https://docs.rs/dupcheck"
homepage = "https://github.com/ttempleton/dupcheck"
repository = "https://github.com/ttempleton/dupcheck.git"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "~2.33.0"
blake2 = "0.8"

[[bin]]
name = "dupcheck"
doc = false

